# soil-sentinel

./: .audit-repair-trigger  .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig.defaults
.github/workflows/: apply-soil-audit-fixes.yml  run-pr8-audit-fix.yml
core/include/: soil_model.h  soil_service.h  soil_telemetry.h
core/src/: soil_model.c  soil_service.c
docs/: ARCHITECTURE.md  FIELD_TEST.md  OTA.md  ZHA.md
integrations/zha_quirks/: soil_sentinel.py
main/: CMakeLists.txt  app_main.c  board.c  board.h  firmware_update.c  firmware_update.h  idf_component.yml  main.c  ota_file_parser.c  ota_file_parser.h  soil_sdk_compat.h  storage.c  storage.h  zigbee_transport.c  zigbee_transport.h
scripts/: build-release.sh  build-zigbee-ota.py  build.sh  test-host.sh
tests/: test_soil_model.c
